<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_Activity1"
    android:layout_margin="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <!-- user name reg no and pic -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            >
            <!-- addimg 2 leniar layout -->

            <!-- for username -->
            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/"
                    android:layout_margin="20dp"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    >
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/REG_NO"
                    android:layout_marginStart="20sp"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    >
                </TextView>


            </LinearLayout>
            <!-- for pic -->
            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_width="120dp"
                android:layout_height="120dp">
                <ImageView
                    android:layout_width="115dp"
                    android:layout_height="110dp"
                    android:src="@drawable/swapnil_pic_formal"
                    android:contentDescription="@string/user_picture">
                </ImageView>

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CLUBS"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold">
        </TextView>

        <!-- making tabs -->
        <!-- for 6 tabs 1 linear layout -->
        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <!-- 1st set buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="5dp"
                >
                <Button
                    android:text="MCA"
                    android:id="@+id/mca_button"
                    android:layout_marginStart="20dp"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:textSize="30sp"
                    android:textStyle="bold">

                </Button>
                <Button
                    android:text="MBA"
                    android:id="@+id/mba_button"
                    android:layout_marginStart="20dp"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:textSize="30sp"
                    android:textStyle="bold">

                </Button>
                <Button
                    android:text="MTECH"
                    android:id="@+id/mtech_button"
                    android:layout_marginStart="20dp"
                    android:layout_width="155dp"
                    android:layout_height="155dp"
                    android:textSize="30sp"
                    android:textStyle="bold">
                </Button>
            </LinearLayout>

            <!-- 2nd set of buttons -->
            <LinearLayout
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <Button
                    android:text="BTECH"
                    android:id="@+id/btech_button"
                    android:layout_marginStart="20dp"
                    android:layout_width="155dp"
                    android:layout_height="160dp"
                    android:textSize="30sp"
                    android:textStyle="bold">

                </Button>
                <Button
                    android:text="BBA"
                    android:id="@+id/bba_button"
                    android:layout_marginStart="20dp"
                    android:layout_width="155dp"
                    android:layout_height="160dp"
                    android:textSize="25sp"
                    android:textStyle="bold">

                </Button>
                <Button
                    android:text="BIOTECH"
                    android:id="@+id/biotech_button"
                    android:layout_marginStart="20dp"
                    android:layout_width="155dp"
                    android:layout_height="155dp"
                    android:textSize="25sp"
                    android:textStyle="bold">
                </Button>
            </LinearLayout>

        </LinearLayout>

        <!-- NAV BAR BELOW -->
        <LinearLayout
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            >
            <ImageButton
                android:id="@+id/nav1"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_margin="5dp"
                android:tooltipText="@string/nav1"
                >
            </ImageButton>
            <ImageButton
                android:id="@+id/nav2"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_margin="5dp"
                >
            </ImageButton>
            <ImageButton
                android:id="@+id/nav3"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_margin="5dp"
                >
            </ImageButton>
            <ImageButton
                android:id="@+id/nav4"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_margin="5dp"
                >
            </ImageButton>
            <ImageButton
                android:id="@+id/nav5"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_margin="5dp"
                >
            </ImageButton>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>